--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "My ERS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+
   },
   "author": "Soumitra Ghosh",
   "license": "ISC",
