--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
-
   },
   "author": "Soumitra Ghosh",
   "license": "ISC",
@@ -17,6 +16,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "mongodb": "^5.4.0",
     "mongoose": "^7.0.4",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
